feat: Improving file storage and security filters usage