@@ -1,64 +1,69 @@
 package com.vidilab.ingestion.service;
 
 import com.vidilab.ingestion.exception.FileStorageException;
+import jakarta.annotation.PreDestroy;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.nio.channels.AsynchronousFileChannel;
-import java.nio.ByteBuffer;
-import java.nio.channels.CompletionHandler;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executor;
 
 @Service
 public class FileStorageService implements StorageService {
 
-    private final String ERROR_MESSAGE_IO_FAILURE = "Failed to store file %s";
-    private final String FILE_PATH_FORMAT = "%s/%s";
+    private static final Logger logger = LoggerFactory.getLogger(FileStorageService.class);
+
+    private static final String ERROR_MESSAGE_IO_FAILURE = "Failed to store file %s";
+    private static final String FILE_PATH_FORMAT = "%s/%s";
+
+    private final Executor fileStorageExecutor;
+
+    public FileStorageService(Executor fileStorageExecutor) {
+        this.fileStorageExecutor = fileStorageExecutor;
+    }
 
     @Override
-    public CompletableFuture<Void> storeFileAsync(String storagePath, MultipartFile file) throws FileStorageException {
-        var fileName = StringUtils.cleanPath(Objects.requireNonNull(file.getOriginalFilename()));
-        var filePath = Path.of(FILE_PATH_FORMAT.formatted(storagePath, fileName));
+    public CompletableFuture<Void> storeFileAsync(String storagePath, MultipartFile file) {
+        return CompletableFuture.runAsync(() -> {
+            var fileName = StringUtils.cleanPath(Objects.requireNonNull(file.getOriginalFilename()));
+            var filePath = Paths.get(FILE_PATH_FORMAT.formatted(storagePath, fileName));
 
-        try {
+            try {
+                Files.createDirectories(filePath.getParent());
 
-            Files.createDirectories(filePath.getParent());
-
-            try (var fileChannel = AsynchronousFileChannel.open(
-                    filePath,
-                    StandardOpenOption.WRITE,
-                    StandardOpenOption.CREATE,
-                    StandardOpenOption.TRUNCATE_EXISTING
-            )) {
-                ByteBuffer buffer = ByteBuffer.wrap(file.getBytes());
-
-                var completableFuture = new CompletableFuture<Void>();
-
-                fileChannel.write(buffer, 0, null, new CompletionHandler<>() {
-                    @Override
-                    public void completed(Integer result, Object attachment) {
-                        completableFuture.complete(null);
+                try (var outputStream = Files.newOutputStream(filePath,
+                        StandardOpenOption.CREATE,
+                        StandardOpenOption.TRUNCATE_EXISTING)) {
+                    byte[] buffer = new byte[8192];
+                    int bytesRead;
+                    var inputStream = file.getInputStream();
+                    while ((bytesRead = inputStream.read(buffer)) != -1) {
+                        outputStream.write(buffer, 0, bytesRead);
                     }
+                }
 
-                    @Override
-                    public void failed(Throwable exc, Object attachment) {
-                        completableFuture.completeExceptionally(new FileStorageException(ERROR_MESSAGE_IO_FAILURE.formatted(fileName), exc));
-                    }
-                });
+                logger.debug("File {} stored successfully at {}", fileName, filePath);
 
-                return completableFuture;
+            } catch (IOException ex) {
+                logger.error("I/O error while storing file {}: {}", fileName, ex.getMessage());
+                throw new FileStorageException(ERROR_MESSAGE_IO_FAILURE.formatted(fileName), ex);
             }
+        }, fileStorageExecutor);
+    }
 
-        } catch (IOException ex) {
-            throw new FileStorageException(ERROR_MESSAGE_IO_FAILURE.formatted(fileName), ex);
+    @PreDestroy
+    public void shutdownExecutor() {
+        if (fileStorageExecutor instanceof ThreadPoolTaskExecutor) {
+            ((ThreadPoolTaskExecutor) fileStorageExecutor).shutdown();
         }
     }
 }
-
-
